force-app/main/default/objects/Document__c/fields/Corporate_KYC__c.field-meta.xml
<CustomField>
    <fullName>Corporate_KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate KYC</label>
    <referenceTo>Corporate_KYC__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>