force-app/main/default/objects/Document__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Directors/Auth.Sign. KYC</label>
    <referenceTo>Director__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>