force-app/main/default/objects/Document__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document</valueSetName>
    </valueSet>
</CustomField>