force-app/main/default/objects/Document__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>