force-app/main/default/objects/Document__c/fields/UBO__c.field-meta.xml
<CustomField>
    <fullName>UBO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UBO</label>
    <referenceTo>UBO__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>